syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    LiveExpiryAtm (surfaceType = 'Live') records are computed and publish continuously during trading hours and represent a current best implied volatility market fit.
    SurfaceType = 'PriorDay' records contain the `closing surface record from the prior trading period (usually from just before the last main session close).
*/    
message LiveExpiryAtm {
    message PKey {
        
        ExpiryKey ekey = 10;
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    double u_prc = 100; // effective uPrc used for surface fitting
    double u_prc_driver = 101; // underlier driver (mid-market)
    float atm_vol = 102; // atm surface volatility (xAxis = 0)
    float atm_slope = 103; // volatility surface slope (dVol / dXAxis) @ ATM (xAxis=0)
    float axis_fUPrc = 104; // axis fwdUPrc (used to compute xAxis)
    float x_mult = 105;
    float x_shift = 106;
    float skew_mult = 107; // sVol = skewMult * BasisSkewFn(xMult * (xAxis - xShift))
    google.protobuf.Timestamp s_timestamp = 108; // timestamp of the corresponding LiveExpirySurface record
    google.protobuf.Timestamp timestamp = 109;
}


